--- a/css/estilos.css
+++ b/css/estilos.css
@@ -343,6 +343,29 @@ textarea{
 
 
 
+/* boostrap */
+
+
+
+.slide{
+
+
+    margin-top: 10x;
+
+}
+
+
+
+.slide img{
+
+
+    height: 65vh;
+    
+}
+
+
+
+
 
 /* Web responsive pagina inicio con flex box */
 
