--- a/css/estilos.css
+++ b/css/estilos.css
@@ -347,10 +347,24 @@ textarea{
 
 
 
+
+.text_bootstrap{
+
+display: flex;
+justify-content: center;
+align-items: center;
+margin: 80px auto 10px;
+font-size: 35px;
+border-bottom: 1px solid #000;
+
+}
+
+
+
 .slide{
 
 
-    margin-top: 10x;
+    margin-top: 10px;
 
 }
 
@@ -359,8 +373,15 @@ textarea{
 .slide img{
 
 
-    height: 65vh;
+    height: 75vh;
     
+}
+
+.carousel-item .d-block .img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+   
 }
 
 
@@ -488,6 +509,7 @@ textarea{
 
     
 }
+
 
 
 
